# mc-motd

./: Cargo.toml  config.json  config.schema.json
src/: config.rs  lib.rs  main.rs  server.rs  types.rs  utils.rs
