[package]
name = "mc-motd"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
log = "0.4.29"
schemars = "1.2.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
simple_logger = { version = "5.2.0", features = ["timestamps", "colors"] }
